--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+reqwest = { version = "0.12.22", default-features = false, features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
 tokio = { version = "1.36", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
