--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 tokio = { version = "1.36", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
+getset = "0.1.6"
+once_cell = "1.21.3"
+async-trait = "0.1.88"
