--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -16,3 +16,9 @@ tower-http = { version = "0.5.0", features = ["fs"] }
 getset = "0.1.6"
 once_cell = "1.21.3"
 async-trait = "0.1.88"
+tonic = "0.14.0"
+prost = "0.14.1"
+tonic-prost = "0.14.0"
+
+[build-dependencies]
+tonic-prost-build = "0.14.0"
