--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,5 @@
 # Start with image that has the Rust toolchain installed
-FROM rust:1.85-alpine AS chef
+FROM rust:1.88-alpine AS chef
 USER root
 # Add cargo-chef to cache dependencies
 RUN apk add --no-cache musl-dev & cargo install cargo-chef
@@ -13,6 +13,7 @@ RUN cargo chef prepare --recipe-path recipe.json
 FROM chef AS builder
 COPY --from=planner /app/recipe.json recipe.json
 # Build dependencies - this is the caching Docker layer!
+RUN apk add --no-cache protobuf protobuf-dev
 RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
 COPY . .
