--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 tokio = { version = "1.36", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["fs", "cors"] }
+tower-http = { version = "0.6.6", features = ["fs", "cors"] }
 getset = "0.1.6"
 once_cell = "1.21.3"
 async-trait = "0.1.88"
@@ -24,3 +24,5 @@ chrono = "0.4.41"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 dotenvy = "0.15.7"
 lazy_static = "1.5.0"
+http = "1.3.1"
+tower-layer = "0.3.3"
