--- a/compose.yml
+++ b/compose.yml
@@ -14,5 +14,6 @@ services:
     restart: "always" # automatically restart container when server crashes
     environment:
       JWT_SECRET: ${JWT_SECRET}
+      ALLOWED_ORIGINS: http://${DROPLET_IP:-localhost}:8000,http://${DROPLET_IP:-localhost}:3000
     ports:
       - "3000:3000" # expose port 3000 so that applications outside the container can connect to it 
