--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -24,3 +24,4 @@ chrono = "0.4.41"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 dotenvy = "0.15.7"
 lazy_static = "1.5.0"
+rand = "0.9.2"
