--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -25,3 +25,10 @@ axum-extra = { version = "0.9.2", features = ["cookie"] }
 dotenvy = "0.15.7"
 lazy_static = "1.5.0"
 rand = "0.9.2"
+sqlx = { version = "0.8", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "migrate",
+] }
+argon2 = { version = "0.5.3", features = ["std"] }
+redis = { version = "0.25.2", features = ["tokio-comp"] }
