--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -10,12 +10,13 @@ axum = "0.7.4"
 reqwest = { version = "0.12.22", default-features = false, features = [
     "cookies",
     "json",
+    "rustls-tls",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 tokio = { version = "1.36", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["fs", "cors"] }
+tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
 getset = "0.1.6"
 once_cell = "1.21.3"
 async-trait = "0.1.88"
@@ -32,3 +33,16 @@ sqlx = { version = "0.8", features = [
 ] }
 argon2 = { version = "0.5.3", features = ["std"] }
 redis = { version = "0.25.2", features = ["tokio-comp"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = [
+    "registry",
+    "env-filter",
+] }
+tracing-error = "0.2.0"
+thiserror = "1.0.58"
+color-eyre = "0.6.3"
+secrecy = { version = "0.8.0", features = ["serde"] }
+
+[dev-dependencies]
+wiremock = "0.6.0"
+fake = "4.4.0"
